<resources>
    <string name="app_name">KeepReceipt</string>

    <!--Placeholder names-->
    <string name="placeholder_receipt_vendor">Walmart</string>
    <string name="placeholder_receipt_price">$100.00</string>
    <string name="placeholder_receipt_date">Dec 26, 2018</string>

    <!--Menu Item Names-->
    <string name="action_search_name">Search</string>
    <string name="action_edit_multiple_name">Edit Multiple</string>
    <string name="action_filter_name">Filter</string>

    <!--Activity Actionbar Titles-->
    <string name="main_activity_actionbar_title">Receipts</string>
    <string name="add_new_receipt_actionbar_title">Add New Receipt</string>
    <string name="edit_receipt_actionbar_title">Edit Receipt</string>
    <string name="view_receipt_activity_actionbar_title">Receipt</string>
    <string name="search_results_activity_title">Search Results</string>

    <!--AllReceiptsFragment-->
    <string name="main_activity_search_hint">Enter a vendor or amount</string>

    <!--Add/Edit/View Receipt-->
    <string name="edit_hint_vendor">Vendor</string>
    <string name="edit_receipt_price">Price</string>
    <string name="edit_receipt_date">Date</string>
    <string name="edit_receipt_save">Save</string>
    <string name="action_edit_receipt_delete">Delete</string>
    <string name="view_receipt_vendor_label">Vendor Name:</string>
    <string name="view_receipt_date_label">Date:</string>
    <string name="view_receipt_amount_label">Amount:</string>
    <string name="view_receipt_category_label">Category:</string>
    <string name="action_edit_receipt">Edit</string>
    <string name="cancel_add_receipt_title">Cancel Add Receipt</string>
    <string name="cancel_add_receipt_message">Are you sure you want to cancel?</string>
    <string name="delete_receipt_title">Delete Receipt</string>
    <string name="delete_receipt_text">Are you sure you want to delete this receipt?</string>
    <string name="positive_dialog_text">Yes</string>
    <string name="negative_dialog_text">No</string>
    <string name="price_input_error_message">Please enter a price</string>
    <string name="vendor_input_error_message">Please enter a vendor</string>
    <string name="none_category_placeholder">None</string>

    <!--Realm Field Names-->
    <string name="REALM_receipt_amount">amount</string>
    <string name="REALM_receipt_vendor">vendor</string>
    <string name="REALM_receipt_time">transactionTime</string>
    <string name="REALM_receipt_id">receiptId</string>
    <string name="REALM_category_name">name</string>
    <string name="REALM_parent_category_name">parentCategories.name</string>

    <!--Category UI-->
    <string name="select_category_title">Select Category</string>
    <string name="edit_receipt_category">Category</string>
    <string name="no_categories_hint_text">No categories have been added yet.  Add a category to start categorizing your receipts</string>
    <string name="placeholder_category_name">Groceries</string>
    <string name="action_pick_category_done">Done</string>
    <string name="action_pick_category_cancel">Cancel</string>
    <string name="action_edit_categories">Add/Remove</string>
    <string name="add_category_dialog_title">Add a Category</string>
    <string name="add_category_dialog_message">Specify a category name</string>
    <string name="add_category_error_msg">Please enter a valid category name</string>

    <!--Misc UI-->
    <string name="error_snackbar">Something Went Wrong</string>
    <string name="no_receipts_hint">No receipts have been added yet.\n\nUse KeepReceipt to easily digitalize and track your purchases.</string>

    <!--Search-->
    <string name="search_title">Advanced Search</string>
    <string name="search_hint_keywords">Keywords</string>
    <string name="search_header_general">General</string>
    <string name="search_hint_category">Category</string>
    <string name="search_header_price">Price</string>
    <string name="search_hint_min_price">Minimum</string>
    <string name="search_hint_max_price">Maximum</string>
    <string name="search_header_date">Date</string>
    <string name="search_hint_min_date">From</string>
    <string name="search_hint_max_date">To</string>
    <string name="search_button_label">Search</string>
    <string name="search_price_error_message">Maximum price must be greater than minimum price</string>
    <string name="search_date_error_message">\"From\" date must be earlier than \"To\"</string>
    <string name="search_no_results_text">No Results Found</string>
    <string name="search_categories_any_placeholder">Any</string>
    <string name="bottom_nav_view_all">View All</string>
    <string name="bottom_nav_search">Search</string>

</resources>
